<resources>
    <string name="app_name" translatable="false">RyVE</string>
    <string name="ryve_name">Reposta y Viaja Eficientemente</string>
    <string name="copyright" translatable="false">martinlacorrona ©</string>
    <string name="login_cannot">No ha sido posible iniciar sesión.</string>
    <string name="mail">Email</string>
    <string name="password">Contraseña</string>
    <string name="repeat_password">Repetir contraseña</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellidos</string>
    <string name="login">Iniciar sesión</string>
    <string name="register">Registrarse</string>
    <string name="logining">Iniciando sesión...</string>
    <string name="registering">Registrandose...</string>
    <string name="retry">Reintentar</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="login_succesfully">Sesión iniciada correctamente.</string>
    <string name="error_ocurred">Ha ocurrido un error iniciando sesión.</string>
    <string name="error_ocurred_register">Ha ocurrido un error registrandose.</string>
    <string name="error_ocurred_saving_with">Ha ocurrido un error guardando %s.</string>
    <string name="login_credentials_bad">Credenciales de inicio de sesión erroneas.</string>
    <string name="error_connecting">Error conectando con el servidor.</string>
    <string name="user_data">Datos de usuario</string>

    <string name="default_notification_channel_id">Alertas</string>
    <string name="default_notification_channel_info">Alertas de la aplicación sobre precios de estaciones de servicio suscritas.</string>
    <string name="fuel_types">Tipos de combustible</string>
    <string name="favourite_station_service">Estaciones favoritas</string>
    <string name="station_service">Estaciones de servicio</string>
    <string name="history_station_service">Histórico de estaciones</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_favourites">Favoritos</string>
    <string name="menu_travel">Viajar</string>
    <string name="menu_alert">Alertas</string>
    <string name="menu_map">Mapa</string>
    <string name="nav_header_title" translatable="false">Ryve</string>
    <string name="nav_header_subtitle">Reposta y Viaja Eficientemente</string>
    <string name="search">Buscar</string>
    <string name="filter">Filtrar</string>
    <string name="menu_edit_account">Editar cuenta</string>
    <string name="menu_logout">Cerrar sesión</string>
    <string name="favourite_fuel">Combustible favorito</string>
    <string name="km_range">Distancia máx. depósito lleno (km)</string>
    <string name="carname">Marca coche</string>
    <string name="carcolor">Color del coche</string>
    <string name="save">Guardar</string>
    <string name="saving">Guardando %s...</string>
    <string name="save_succesfully">Guardado correcto.</string>
    <string name="preferences">Preferencias</string>
    <string name="loading">Cargando %s...</string>
    <string name="error_ocurred_loading">Error cargando %s.</string>
    <string name="no_connection">No ha sido posible establecer la conexión</string>
    <string name="load_offline">Se han cargado los datos de la ultima vez que se inicio sesión.</string>
    <string name="no_offline_version">No tienes ninguna versión offline descargada por lo que tienes que reintentar.</string>
    <string name="ok">OK</string>
    <string name="password_are_not_same">Las contraseñas no coinciden, revisalas.</string>
    <string name="logingout">Cerrando sesión</string>
    <string name="error_logout">Ha ocurrido un error con la conexión cerrando la sesión, intentalo de nuevo.</string>
    <string name="logout">Cerrar sesión</string>
    <string name="no_results">Sin resultados</string>
    <string name="no_results_found">No se han encontrado resultados para esa busqueda.</string>
    <string name="apply">Aplicar</string>
    <string name="order_by">Ordenar por</string>
    <string name="order_way">Ordenar de forma</string>
    <string name="price_min">Precio mínimo</string>
    <string name="price_max">Precio máximo</string>
    <string name="price">Precio</string>
    <string name="ascendent">Ascendente</string>
    <string name="descendent">Descendente</string>
    <string name="details">Detalles</string>
    <string name="add_alert">Añadir alerta</string>
    <string name="history">Histórico</string>
    <string name="show_on_maps">Mostrar en Google Maps</string>
    <string name="add_favourite">Añadir a favoritos</string>
    <string name="delete_favourite">Borrar de favoritos</string>
    <string name="adding_to_favourites">Agregando estación de servicio a favoritos...</string>
    <string name="error_ocurred_adding_favourite">Ha ocurrido un error guardando el favorito.</string>
    <string name="add_succesfully">Añadido correctamente.</string>
    <string name="remove_to_favourites">Borrando de favoritos...</string>
    <string name="remove_favourites">Eliminar favorito</string>
    <string name="error_ocurred_removing_favourite">Ha ocurrido un error borrando un favorito.</string>
    <string name="remove_succesfully">Borrado correcto.</string>
    <string name="days">%d días</string>
    <string name="days_alone">días</string>
    <string name="alert_every">¿Recibir alerta cada cuantos días?</string>
    <string name="adding_alert">Agregando nueva alerta...</string>
    <string name="error_ocurred_adding_alert">Ha ocurrido un error definiendo la nueva alerta.</string>
    <string name="add_alerta_succesfully">Alerta agregada correctamente.</string>
    <string name="loading_history">Buscando histórico de la estación seleccionada...</string>
    <string name="no_data_available">No hay datos disponibles para esta estación de servicio.</string>
    <string name="are_you_sure_delete_favourite">¿Estás seguro de que quieres borrar este favorito?</string>
    <string name="dont_have_favourites_add_in_home">Aún no tienes favoritos. Puedes añadirlos desde la vista de inicio o desde el mapa.</string>
    <string name="edit_account">Editar cuenta</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="repeat_new_password">Repetir nueva contraseña</string>
    <string name="updating_account_settings">Actualizando tu cuenta...</string>
    <string name="error_ocurred_editing_account">Error editando la cuenta.</string>
    <string name="show_suscription_list">Mostrar listado de suscripciones</string>
    <string name="notification_list">Listado de notificaciones:</string>
    <string name="dont_have_notifications_add_in_home">Aún no tienes ninguna notificación. Para ello puedes suscribirte a precios de estaciones de servicio desde la pantalla de inicio o desde el mapa.</string>
    <string name="remove_notification">Borrar notificación</string>
    <string name="viewed">Leída</string>
    <string name="unviewed">No leída</string>
    <string name="are_you_sure_delete_notification">¿Estás seguro de borrar esta notificación?</string>
    <string name="mark_all_as_readed">Marcar todas como leídas</string>
    <string name="next_nofication_two_dots">Próxima notification:</string>
    <string name="period_in_days_two_dots">Tiempo entre notificaciones:</string>
    <string name="are_you_sure_mark_all_as_read">¿Estás seguro que deseas marcar todas las notificaciones como leídas?</string>
    <string name="dont_have_suscriptions_suscribe_in_home">Aún no tienes ninguna suscripción. Agregalas desde la pantalla de inicio o desde el mapa seleccionado una estación de servicio.</string>
    <string name="suscription_list">Listado de suscripciones</string>
    <string name="removing_alert">Borrando alerta...</string>
    <string name="remove_alert">Borrar alerta</string>
    <string name="error_ocurred_removing_alerta">Ha ocurrido un error al borrar la alerta.</string>
    <string name="are_you_sure_delete_alert">¿Estás seguro que deseas borrar esta alerta?</string>
    <string name="travel">Viajar</string>
    <string name="origin">Origen</string>
    <string name="destination">Destino</string>
    <string name="max_distance_of_vehicle">Distancia media con depósito lleno en km</string>
    <string name="percentage_loaded">Porcentaje de carga depósito (%)</string>
    <string name="price_max_station_service_in_trip">Precio máximo por estación por Litro</string>
    <string name="error_preparing_trip">Error preparando el viaje</string>
    <string name="least_20_loaded_percentaje">Es necesario tener mas de un 20% de carga.</string>
    <string name="max_distance_at_least_50_km">La distancia media con depósito lleno debe de ser al menos 50km.</string>
    <string name="max_price_more_than_zero">El precio máximo de la estación debe de ser mayor de 0.</string>
    <string name="select_origin_and_destination">Es obligatorio seleccionar origen y destino.</string>
    <string name="avoid_tolls">¿Evitar peajes?</string>
    <string name="no">No</string>
    <string name="yes">Sí</string>
    <string name="generating_route">Generando ruta</string>
    <string name="generating_route_process">Generando ruta...</string>
    <string name="route">Ruta</string>
    <string name="error_routing_from_server">El servidor nos ha enviado datos erroneóneos y no podemos generar la ruta.</string>
    <string name="loading_near_station_services">Buscando estaciones de servicio cercanas...</string>
    <string name="no_stations_near">No hay estacion de servicio cerca de esta ruta</string>
    <string name="select_other_route_no_stations_near">Selecciona otra ruta o activa peajes para buscar una nueva ruta, no se han encontrado estaciones de servicio cercanas.</string>
    <string name="generate_route">Generar ruta</string>
    <string name="how_to_generate_route">Cómo generar ruta</string>
    <string name="instructions_generate_route">Para generar una ruta válida deberás seleccionar estaciones de servicio para que no haya ningún punto de la ruta muerto (ruta en color negro). Al hacer clic sobre una estación la seleccionaras además de ver el precio en la parte de abajo.</string>
    <string name="you_have_dead_points">Puntos muertos en la ruta detectados</string>
    <string name="you_need_to_havent_dead_points">Tienes que quitar todos los puntos muertos de la ruta. No puede haber ninguna parte de color negro en la ruta, para ello añade estaciones de servicio cerca de estos puntos.</string>
    <string name="battery">Combustible:</string>
    <string name="export_in_google_maps">Exportar a Google Maps</string>
    <string name="stops">Paradas:</string>
    <string name="distance_total">Distancia total</string>
    <string name="estimated_price">Precio medio estimado por Litro</string>
    <string name="estimated_percentage_at_arrive">Porcentaje restante al llegar (%)</string>
    <string name="estimated_time">Tiempo estimado</string>
    <string name="generated_route">Ruta generada</string>
    <string name="minutes">minutos</string>
    <string name="select_at_least">No tienes estaciones seleccionadas</string>
    <string name="select_at_least_one_or_more">Selecciona una o más estaciones de servicio para poder generar la ruta.</string>
    <string name="menu_my_vehicle">Mi vehículo</string>
    <string name="my_vehicle">Mi vehículo</string>
    <string name="ccaa">Comunidad autónoma</string>
    <string name="all_comunities">Todas</string>
</resources>