<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_home_24_black"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/navigation_favourites"
        android:icon="@drawable/ic_baseline_star_24_black"
        android:title="@string/menu_favourites" />

    <item
        android:id="@+id/navigation_travel"
        android:icon="@drawable/ic_baseline_card_travel_24_black"
        android:title="@string/menu_travel" />

    <item
        android:id="@+id/navigation_alert"
        android:icon="@drawable/ic_baseline_notifications_active_24_black"
        android:title="@string/menu_alert" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_baseline_map_24_black"
        android:title="@string/menu_map" />

</menu>