<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.martinlacorrona.ryve.mobile.view.principal.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favourites"
        android:name="com.martinlacorrona.ryve.mobile.view.principal.FavouritesFragment"
        android:label="@string/menu_favourites"
        tools:layout="@layout/fragment_favourites" />

    <fragment
        android:id="@+id/navigation_travel"
        android:name="com.martinlacorrona.ryve.mobile.view.principal.TravelFragment"
        android:label="@string/menu_travel"
        tools:layout="@layout/fragment_travel" />

    <fragment
        android:id="@+id/navigation_alert"
        android:name="com.martinlacorrona.ryve.mobile.view.principal.AlertFragment"
        android:label="@string/menu_alert"
        tools:layout="@layout/fragment_alert" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.martinlacorrona.ryve.mobile.view.principal.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />
</navigation>