<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.FilterActivity">

    <data>
        <variable
            name="vm"
            type="com.martinlacorrona.ryve.mobile.viewmodel.FilterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/filter"

            app:titleTextColor="@color/white" />

        <LinearLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:orientation="vertical"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            tools:layout_editor_absoluteX="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/combo_field_order_by"

                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:hint="@string/order_by"
                app:startIconDrawable="@drawable/ic_baseline_arrow_forward_ios_24">

                <AutoCompleteTextView
                    android:id="@+id/combo_field_order_by_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/combo_field_order_way"

                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/order_way"

                app:startIconDrawable="@drawable/ic_baseline_arrow_forward_ios_24">

                <AutoCompleteTextView
                    android:id="@+id/combo_field_order_way_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/combo_field_ccaa"

                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ccaa"

                app:startIconDrawable="@drawable/ic_baseline_location_on_24">

                <AutoCompleteTextView
                    android:id="@+id/combo_field_ccaa_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_field_edit_text_price_min"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price_min"

                app:endIconMode="clear_text"

                app:startIconDrawable="@drawable/ic_baseline_arrow_downward_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_field_edit_text_price_min_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text="@={vm.minPrice}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_field_edit_text_price_max"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/price_max"

                app:endIconMode="clear_text"

                app:startIconDrawable="@drawable/ic_baseline_arrow_upward_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_field_edit_text_price_max_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text="@={vm.maxPrice}" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/button_apply"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>