<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.RouteGeneratedActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.martinlacorrona.ryve.mobile.viewmodel.RouteGeneratedViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/generated_route"

            app:titleTextColor="@color/white" />

        <LinearLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintWidth_max="400dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/distance_total"

                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@id/text_field_favourite_fuel"
                app:startIconDrawable="@drawable/ic_baseline_control_point_duplicate_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={vm.distance}"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/estimated_price"

                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@id/text_field_edit_text_km_range"
                app:startIconDrawable="@drawable/ic_baseline_attach_money_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={vm.estimatedPrice}"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/estimated_percentage_at_arrive"
                app:startIconDrawable="@drawable/ic_baseline_battery_charging_full_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={vm.estimatedPercentageAtArrive}"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:enabled="false"
                android:hint="@string/estimated_time"
                app:layout_constraintEnd_toEndOf="parent"

                app:startIconDrawable="@drawable/ic_baseline_access_time_24">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:clickable="true"

                    android:focusable="false"
                    android:inputType="none"
                    android:text="@{vm.estimatedTime}"

                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stops" />
        </LinearLayout>

        <ListView
            android:id="@+id/stops_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintBottom_toTopOf="@+id/button_import_to_google_maps"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <Button
            android:id="@+id/button_import_to_google_maps"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/export_in_google_maps"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>